Adicionado mudanças no programa WSL010.prw

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,16 @@
 			"name": "TOTVS Language Debug",
 			"program": "${command:AskForProgramName}",
 			"cwb": "${workspaceFolder}",
-			"smartclientBin": "C:/totvs/bin/smartclient/smartclient.exe",
+			"smartclientBin": "C:/smartclient-bonlub-prod/smartclient.exe",
 			"isMultiSession": true,
 			"enableTableSync": true
 		}
-	]
+	],
+	"lastPrograms": [
+		{
+			"label": "SIGAMDI",
+			"description": "<nil>"
+		}
+	],
+	"lastProgramExecuted": "SIGAMDI"
 }
